--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyApplication" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.PawtyTime" parent="Theme.Material3.DayNight.NoActionBar">
+    <item name="android:windowBackground">@color/pawty_yellow</item>
+    <item name="android:forceDarkAllowed">false</item>
+    </style>
+
 </resources>
