added all project colors

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -68,7 +68,7 @@
         android:elevation="12dp"
         android:fontFamily="@font/marcellus"
         android:text="@string/tagline"
-        android:textColor="@color/pawty_text"
+        android:textColor="@color/pawty_text_primary"
         android:textSize="20sp"
         android:translationZ="20dp"
 
