--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,9 @@
     <style name="Theme.PawtyTime" parent="Theme.Material3.DayNight.NoActionBar">
     <item name="android:windowBackground">@color/pawty_yellow</item>
     <item name="android:forceDarkAllowed">false</item>
+        <item name="colorPrimary">@color/pawty_dark_blue</item>
+        <item name="colorControlActivated">@color/pawty_dark_blue</item>
+        <item name="colorOnPrimary">@android:color/white</item>
     </style>
 
 </resources>
