--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/home"
-        android:title="Home"/>
+        android:title="@string/home_tab"/>
     <item
         android:id="@+id/events"
         android:icon="@drawable/events"
-        android:title="Events"/>
+        android:title="@string/events_tab"/>
     <item
         android:id="@+id/map"
         android:icon="@drawable/map"
-        android:title="Map"/>
+        android:title="@string/map_tab"/>
     <item
         android:id="@+id/shop"
         android:icon="@drawable/shop"
-        android:title="Shop"/>
+        android:title="@string/shop_tab"/>
 </menu>
