Fixed issues and created most functionality, waiting for profiles and such to fill certain areas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="pawty_teal">#1E8E89</color>
     <color name="pawty_orange">#FFA726</color>
     <color name="pawty_text">#333333</color>
+    <color name="liked_color">#0B4365</color>
+    <color name="pt_black">#000000</color>
 
 </resources>
