--- a/app/src/main/res/layout/fragment_pet_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_pet_profile_edit.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Inbox"
+    tools:context=".Notifications"
     android:background="@color/pawty_yellow">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Inbox Screen"
-        android:textSize="46dp"
+        android:text="Edit Pet Profile Screen"
+        android:textSize="30dp"
         android:layout_gravity="center" />
 
 </FrameLayout>
