--- a/app/src/main/res/layout/profile_dropdown.xml
+++ b/app/src/main/res/layout/profile_dropdown.xml
@@ -235,6 +235,25 @@
             />
     </LinearLayout>
 
+    <!-- Logout Button -->
+    <LinearLayout
+        android:id="@+id/logoutBtn"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"
+        android:padding="10dp"
+        android:focusable="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logout"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 
 
 </LinearLayout>
