Wired recommended to populate pics and names off firebase/ Image API, Wired posts to use Pet pic and name. Wired create post function and think likes sync

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="pawty_text_primary">#101828</color>
     <color name="pawty_text_secondary">#0B4365</color>
     <color name="pawty_text_third">#AF3E01</color>
+    <color name="pawty_blue_light">#7DB5CF</color>
+    <color name="pawty_blue_dark">#0B4365</color>
+
 </resources>
