--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -8,21 +8,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageButton
             android:id="@+id/profile_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_profile"
-            android:layout_marginStart="15dp"
-            android:background="?attr/selectableItemBackgroundBorderless"/>
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="25dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/cd_profile"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_profile" />
 
         <ImageView
             android:id="@+id/app_logo"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
+            android:layout_width="159dp"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="33dp"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@+id/profile_btn"
             android:src="@drawable/ic_pawty_logo" />
 
@@ -30,19 +35,19 @@
             android:id="@+id/notifs_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="33dp"
+            android:layout_marginStart="21dp"
             android:layout_toEndOf="@+id/app_logo"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_notifications"/>
+            android:src="@drawable/ic_notifications" />
+
         <ImageButton
             android:id="@+id/inbox_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_inbox"
+            android:layout_marginStart="21dp"
             android:layout_toEndOf="@+id/notifs_btn"
-            android:layout_marginStart="33dp"
-            android:background="?attr/selectableItemBackgroundBorderless" />
-
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_inbox" />
 
 
     </RelativeLayout>
